// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTablePagination is rendered 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiPopover euiPopover--anchorUpRight euiPopover--withTitle"
      id="customizablePagination"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiButtonEmpty--iconRight"
          type="button"
        >
          <span
            class="euiButtonEmpty__content"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiButtonEmpty__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_down-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                href="#arrow_down-a"
              />
            </svg>
            <span>
              Rows per page: 50
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiPagination"
      role="group"
    >
      <button
        aria-label="Previous page"
        class="euiButtonIcon euiButtonIcon--text"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xlink="http://www.w3.org/1999/xlink"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <path
              d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
              id="arrow_left-a"
            />
          </defs>
          <use
            fill-rule="nonzero"
            href="#arrow_left-a"
            transform="rotate(90 8 8)"
          />
        </svg>
      </button>
      <button
        aria-label="Page 1 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-0"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span>
            1
          </span>
        </span>
      </button>
      <button
        aria-label="Page 2 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-1"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span>
            2
          </span>
        </span>
      </button>
      <button
        aria-label="Page 3 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-2"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span>
            3
          </span>
        </span>
      </button>
      <button
        aria-label="Page 4 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-3"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span>
            4
          </span>
        </span>
      </button>
      <button
        aria-label="Page 5 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-4"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span>
            5
          </span>
        </span>
      </button>
      <button
        aria-label="Next page"
        class="euiButtonIcon euiButtonIcon--text"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xlink="http://www.w3.org/1999/xlink"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <path
              d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
              id="arrow_right-a"
            />
          </defs>
          <use
            fill-rule="nonzero"
            href="#arrow_right-a"
            transform="matrix(0 1 1 0 0 0)"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiTablePagination is rendered when hiding the per page options 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  />
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiPagination"
      role="group"
    >
      <button
        aria-label="Previous page"
        class="euiButtonIcon euiButtonIcon--text"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xlink="http://www.w3.org/1999/xlink"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <path
              d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
              id="arrow_left-a"
            />
          </defs>
          <use
            fill-rule="nonzero"
            href="#arrow_left-a"
            transform="rotate(90 8 8)"
          />
        </svg>
      </button>
      <button
        aria-label="Page 1 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-0"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span>
            1
          </span>
        </span>
      </button>
      <button
        aria-label="Page 2 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-1"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span>
            2
          </span>
        </span>
      </button>
      <button
        aria-label="Page 3 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-2"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span>
            3
          </span>
        </span>
      </button>
      <button
        aria-label="Page 4 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-3"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span>
            4
          </span>
        </span>
      </button>
      <button
        aria-label="Page 5 of 5"
        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton--hideOnMobile"
        data-test-subj="pagination-button-4"
        type="button"
      >
        <span
          class="euiButtonEmpty__content"
        >
          <span>
            5
          </span>
        </span>
      </button>
      <button
        aria-label="Next page"
        class="euiButtonIcon euiButtonIcon--text"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xlink="http://www.w3.org/1999/xlink"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <path
              d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
              id="arrow_right-a"
            />
          </defs>
          <use
            fill-rule="nonzero"
            href="#arrow_right-a"
            transform="matrix(0 1 1 0 0 0)"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
